overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
   padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  box-sizing: border-box;
 }
 
 /* banner */
@@ -289,10 +288,10 @@ svg:hover {
   }
 
   .span1 {
-    font-size: 20px;
+    font-size: 18px;
   }
   .span2 {
-    font-size: 30px;
+    font-size: 25px;
   }
 
   /* news */
